--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Color Tunnel Unblocked - ubg235 GameDistribution</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Color Tunnel</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+    <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
-  <body style="overflow:hidden;">
+  <body style="overflow: hidden">
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=800 height=600></canvas>
+      <canvas id="unity-canvas" width="800" height="600"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo">
-        	<div id="unity-text-progress"></div>
+          <div id="unity-text-progress"></div>
         </div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-warning"> </div>
-<!--       <div id="unity-footer">
+      <div id="unity-warning"></div>
+      <!--       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Color Tunnel</div>
@@ -31,7 +31,9 @@
       var textProgress = document.querySelector("#unity-text-progress");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
+      var progressBarEmpty = document.querySelector(
+        "#unity-progress-bar-empty"
+      );
       // var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
@@ -43,15 +45,18 @@
       // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+          warningBanner.style.display = warningBanner.children.length
+            ? "block"
+            : "none";
         }
-        var div = document.createElement('div');
+        var div = document.createElement("div");
         div.innerHTML = msg;
         warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        if (type == "error") div.style = "background: red; padding: 10px;";
         else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
+          if (type == "warning")
+            div.style = "background: yellow; padding: 10px;";
+          setTimeout(function () {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -82,74 +87,85 @@
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
 
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
+        var meta = document.createElement("meta");
+        meta.name = "viewport";
+        meta.content =
+          "width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes";
+        document.getElementsByTagName("head")[0].appendChild(meta);
         container.className = "unity-mobile";
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+        canvas.style.width = window.innerWidth + "px";
+        canvas.style.height = window.innerHeight + "px";
 
         // unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+        canvas.style.width = window.innerWidth + "px";
+        canvas.style.height = window.innerHeight + "px";
         // canvas.style.width = "800px";
         // canvas.style.height = "600px";
       }
 
-      window.addEventListener('resize', function() {
-      setTimeout(function() {
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
-      }, 1000);
-      }, false);
+      window.addEventListener(
+        "resize",
+        function () {
+          setTimeout(function () {
+            canvas.style.width = window.innerWidth + "px";
+            canvas.style.height = window.innerHeight + "px";
+          }, 1000);
+        },
+        false
+      );
 
       loadingBar.style.display = "block";
 
-       var showLoadingBar = false;
+      var showLoadingBar = false;
 
-      if(!showLoadingBar)
-        progressBarEmpty.style.display = "none";
+      if (!showLoadingBar) progressBarEmpty.style.display = "none";
 
-
-      const rootPath = 'TemplateData';
+      const rootPath = "TemplateData";
 
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-        if(progress>= 0.9 && progress<1)
-        {
-            textProgress.innerHTML = '100% Running, Wait..' +' <img src="' + rootPath + '/gears.gif" class="spinner" width="90" height="90" align = center float :none; />';
-            progressBarEmpty.style.display = "none";        }
-        else
-        {
-            textProgress.innerHTML = 'Loading ' + Math.floor(progress * 100) + '%' + ' <img src="' + rootPath + '/gears.gif" class="spinner" width="90" height="90" align = center float :none; />';
-        }
+          if (progress >= 0.9 && progress < 1) {
+            textProgress.innerHTML =
+              "100% Running, Wait.." +
+              ' <img src="' +
+              rootPath +
+              '/gears.gif" class="spinner" width="90" height="90" align = center float :none; />';
+            progressBarEmpty.style.display = "none";
+          } else {
+            textProgress.innerHTML =
+              "Loading " +
+              Math.floor(progress * 100) +
+              "%" +
+              ' <img src="' +
+              rootPath +
+              '/gears.gif" class="spinner" width="90" height="90" align = center float :none; />';
+          }
 
-        if(showLoadingBar)
-        progressBarFull.style.width = 100 * progress + "%";
-      
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          textProgress.style.display = "none";
-          // fullscreenButton.onclick = () => {
-          //   unityInstance.SetFullscreen(1);
-          // };
-        }).catch((message) => {
-          alert(message);
-        });
+          if (showLoadingBar)
+            progressBarFull.style.width = 100 * progress + "%";
+        })
+          .then((unityInstance) => {
+            loadingBar.style.display = "none";
+            textProgress.style.display = "none";
+            // fullscreenButton.onclick = () => {
+            //   unityInstance.SetFullscreen(1);
+            // };
+          })
+          .catch((message) => {
+            alert(message);
+          });
       };
       document.body.appendChild(script);
     </script>
-    <script src="js/analytics_ubg_v1_4.js"></script>
   </body>
 </html>
