--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Awesome Tanks 2</title>
-    <meta name="HandheldFriendly" content="true" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
-    />
-    <link href="styles/main.css" rel="stylesheet" />
-    <link href="styles/fonts.css" rel="stylesheet" />
-    <meta name="apple-mobile-web-app-title" content="Awesome Tanks" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  </head>
-  <body>
-    <p
-      style="
-        font-family: 'Gunplay';
-        position: absolute;
-        pointer-events: none;
-        opacity: 0;
-      "
-    >
-      Font loader
-    </p>
-    <script>
-      var AT = {
-          // URL where an user will be redirected after clicking "Play" button on the Site lock screen
-          'SITE_LOCK_TARGET': '//www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley/'
-      };
-
-      var WebFontConfig = {
-          'classes': false,
-          'timeout': 0,
-          'active': function() {},
-          'custom': {'families': ['Gunplay'], 'urls': ['styles/fonts.css']}
-      };
-  </script>
-    <script src="awesome_tanks_2.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><title>Awesome Tanks 2</title><meta name="HandheldFriendly" content="true" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link href="styles/main.css" rel="stylesheet" /><link href="styles/fonts.css" rel="stylesheet" /><meta name="apple-mobile-web-app-title" content="Awesome Tanks" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><p style=" font-family: 'Gunplay'; position: absolute; pointer-events: none; opacity: 0; " >Font loader </p><script>var AT={ SITE_LOCK_TARGET: "//www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley/",}; var WebFontConfig={ classes: false, timeout: 0, active: function (){}, custom:{ families: ["Gunplay"], urls: ["styles/fonts.css"]},}; </script><script src="awesome_tanks_2.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
