--- a/index.html
+++ b/index.html
@@ -1,130 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Bullet Force</title>
-    <link rel="stylesheet" href="TemplateData/style.css" />
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="js/unity-mod.js"></script>
-    <script src="TemplateData/UnityProgress.js"></script>
-  </head>
-  <body style="overflow: hidden; margin: 0; padding: 0">
-    <div
-      class="template-wrap clear"
-      style="
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-      "
-    >
-      <canvas
-        class="emscripten"
-        id="canvas"
-        oncontextmenu="event.preventDefault()"
-        style="width: 100%; height: 100%"
-      ></canvas>
-      <!-- <div class="logo"></div> -->
-    </div>
-    <script type="text/javascript">
-      // connect to canvas
-      var Module = {
-        TOTAL_MEMORY: 536870912,
-        filePackagePrefixURL: "Release/",
-        memoryInitializerPrefixURL: "Release/",
-        preRun: [],
-        postRun: [],
-        print: (function () {
-          return function (text) {
-            console.log(text);
-          };
-        })(),
-        printErr: function (text) {
-          console.error(text);
-        },
-        canvas: document.getElementById("canvas"),
-        progress: null,
-        setStatus: function (text) {
-          if (this.progress == null) {
-            if (typeof UnityProgress != "function") return;
-            this.progress = new UnityProgress(canvas);
-          }
-          if (!Module.setStatus.last)
-            Module.setStatus.last = { time: Date.now(), text: "" };
-          if (text === Module.setStatus.text) return;
-          this.progress.SetMessage(text);
-          var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
-          if (m) this.progress.SetProgress(parseInt(m[2]) / parseInt(m[4]));
-          if (text === "") this.progress.Clear();
-        },
-        totalDependencies: 0,
-        monitorRunDependencies: function (left) {
-          this.totalDependencies = Math.max(this.totalDependencies, left);
-          Module.setStatus(
-            left
-              ? "Preparing... (" +
-                  (this.totalDependencies - left) +
-                  "/" +
-                  this.totalDependencies +
-                  ")"
-              : "All downloads complete."
-          );
-        },
-      };
-      Module.setStatus("Downloading (0.0/1)");
-    </script>
-    <script src="Release/UnityConfig.js"></script>
-    <script src="Release/fileloader.js"></script>
-    <script>
-      if (!!Math.fround) {
-        var script = document.createElement("script");
-        script.src = "Release/BulletForceWebGLDemo.js";
-        document.body.appendChild(script);
-      } else {
-        var codeXHR = new XMLHttpRequest();
-        codeXHR.open("GET", "Release/BulletForceWebGLDemo.js", true);
-        codeXHR.onload = function () {
-          var code = codeXHR.responseText;
-          if (!Math.fround) {
-            try {
-              console.log("optimizing out Math.fround calls");
-              var m = /var ([^=]+)=global\.Math\.fround;/.exec(code);
-              var minified = m[1];
-              if (!minified) throw "fail";
-              var startAsm = code.indexOf("// EMSCRIPTEN_START_FUNCS");
-              var endAsm = code.indexOf("// EMSCRIPTEN_END_FUNCS");
-              var asm = code.substring(startAsm, endAsm);
-              do {
-                var moar = false; // we need to re-do, as x(x( will not be fixed
-                asm = asm.replace(
-                  new RegExp("[^a-zA-Z0-9\\$\\_]" + minified + "\\(", "g"),
-                  function (s) {
-                    moar = true;
-                    return s[0] + "(";
-                  }
-                );
-              } while (moar);
-              code = code.substring(0, startAsm) + asm + code.substring(endAsm);
-              code = code.replace("'use asm'", "'almost asm'");
-            } catch (e) {
-              console.log("failed to optimize out Math.fround calls " + e);
-            }
-          }
-
-          var blob = new Blob([code], { type: "text/javascript" });
-          codeXHR = null;
-          var src = URL.createObjectURL(blob);
-          var script = document.createElement("script");
-          script.src = URL.createObjectURL(blob);
-          script.onload = function () {
-            URL.revokeObjectURL(script.src);
-          };
-          document.body.appendChild(script);
-        };
-        codeXHR.send(null);
-      }
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Bullet Force</title><link rel="stylesheet" href="TemplateData/style.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script src="js/unity-mod.js"></script><script src="TemplateData/UnityProgress.js"></script><link rel="stylesheet" href="toast.css" /></head><body style="overflow: hidden; margin: 0; padding: 0"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="template-wrap clear" style=" position: absolute; width: 100%; height: 100%; margin: 0px; padding: 0px; " ><canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" style="width: 100%; height: 100%" ></canvas></div><script type="text/javascript">var Module={ TOTAL_MEMORY: 536870912, filePackagePrefixURL: "Release/", memoryInitializerPrefixURL: "Release/", preRun: [], postRun: [], print: (function (){ return function (text){ console.log(text);};})(), printErr: function (text){ console.error(text);}, canvas: document.getElementById("canvas"), progress: null, setStatus: function (text){ if (this.progress==null){ if (typeof UnityProgress !="function") return; this.progress=new UnityProgress(canvas);} if (!Module.setStatus.last) Module.setStatus.last={ time: Date.now(), text: ""}; if (text===Module.setStatus.text) return; this.progress.SetMessage(text); var m=text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/); if (m) this.progress.SetProgress(parseInt(m[2]) / parseInt(m[4])); if (text==="") this.progress.Clear();}, totalDependencies: 0, monitorRunDependencies: function (left){ this.totalDependencies=Math.max(this.totalDependencies, left); Module.setStatus( left ? "Preparing... (" + (this.totalDependencies - left) + "/" + this.totalDependencies + ")" : "All downloads complete." );},}; Module.setStatus("Downloading (0.0/1)"); </script><script src="Release/UnityConfig.js"></script><script src="Release/fileloader.js"></script><script>if (!!Math.fround){ var script=document.createElement("script"); script.src="Release/BulletForceWebGLDemo.js"; document.body.appendChild(script);} else{ var codeXHR=new XMLHttpRequest(); codeXHR.open("GET", "Release/BulletForceWebGLDemo.js", true); codeXHR.onload=function (){ var code=codeXHR.responseText; if (!Math.fround){ try{ console.log("optimizing out Math.fround calls"); var m=/var ([^=]+)=global\.Math\.fround;/.exec(code); var minified=m[1]; if (!minified) throw "fail"; var startAsm=code.indexOf("// EMSCRIPTEN_START_FUNCS"); var endAsm=code.indexOf("// EMSCRIPTEN_END_FUNCS"); var asm=code.substring(startAsm, endAsm); do{ var moar=false; asm=asm.replace( new RegExp("[^a-zA-Z0-9\\$\\_]" + minified + "\\(", "g"), function (s){ moar=true; return s[0] + "(";} );} while (moar); code=code.substring(0, startAsm) + asm + code.substring(endAsm); code=code.replace("'use asm'", "'almost asm'");} catch (e){ console.log("failed to optimize out Math.fround calls " + e);}} var blob=new Blob([code],{ type: "text/javascript"}); codeXHR=null; var src=URL.createObjectURL(blob); var script=document.createElement("script"); script.src=URL.createObjectURL(blob); script.onload=function (){ URL.revokeObjectURL(script.src);}; document.body.appendChild(script);}; codeXHR.send(null);} </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
