--- a/index.html
+++ b/index.html
@@ -1,56 +1,1 @@
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Candy Crush</title>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="./cfqdm2r4.bmp" type="image/x-icon" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="HandheldFriendly" content="true" />
-    <meta name="robots" content="noindex,nofollow" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Phaser App" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-user-scalable=no, minimum-scale=1.0, maximum-scale=1.01"
-    />
-    <meta name="game-slug" content="Mayas-Match" />
-    <meta name="supports-ad-play-button" content="true" />
-    <link
-      rel="stylesheet"
-      href="./css/stylesheet.css"
-      type="text/css"
-      charset="utf-8"
-    />
-    <script src="./js/custom-phaser.min.js"></script>
-    <script src="./js/game.min.js"></script>
-    <style>
-      #focusHelper {
-        width: 100vw;
-        height: 100vh;
-        position: fixed;
-        display: none;
-        background-color: #000000;
-        opacity: 0;
-        top: 0px;
-        left: 0px;
-      }
-    </style>
-  </head>
-  <body onload="initGame()">
-    <div id="gameFontPreload">
-      <div style="font-family: ComicSansBold" class="fontPreload">.</div>
-    </div>
-    <div id="focusHelper"></div>
-    <script>
-      window.addEventListener("blur", function () {
-        document.getElementById("focusHelper").style["display"] = "block";
-      });
-      window.addEventListener("focus", function () {
-        document.getElementById("focusHelper").style["display"] = "none";
-      });
-    </script>
-    <script src="./js/scr.js"></script>
-  </body>
-</html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Candy Crush</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta name="HandheldFriendly" content="true" /><meta name="robots" content="noindex,nofollow" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black" /><meta name="apple-mobile-web-app-title" content="Phaser App" /><meta name="game-slug" content="Mayas-Match" /><meta name="supports-ad-play-button" content="true" /><link rel="stylesheet" href="./css/stylesheet.css" type="text/css" charset="utf-8" /><script src="./js/custom-phaser.min.js"></script><script src="./js/game.min.js"></script><style>#focusHelper{ width: 100vw; height: 100vh; position: fixed; display: none; background-color: #000000; opacity: 0; top: 0px; left: 0px;} </style><link rel="stylesheet" href="toast.css" /></head><body onload="initGame()"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="gameFontPreload"><div style="font-family: ComicSansBold" class="fontPreload">.</div></div><div id="focusHelper"></div><script>window.addEventListener("blur", function (){ document.getElementById("focusHelper").style["display"]="block";}); window.addEventListener("focus", function (){ document.getElementById("focusHelper").style["display"]="none";}); </script><script src="./js/scr.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
