--- a/index.html
+++ b/index.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <script>
-      if (window.parent !== window.self) window.parent.postMessage("bonk", "*");
-      window.addEventListener("DOMContentLoaded", function () {
-        document.body.style.margin = "0";
-        document.body.style.height = "100vh";
-        document.body.style.overflow = "hidden";
-      });
-    </script>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Cars Simulator</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-    <link href="shared/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="TemplateData56/style.css" />
-    <script src="TemplateData56/UnityProgress.js"></script>
-    <link rel="icon" href="TemplateData/favicon.ico" />
-    <script src="Build/UnityLoader.js"></script>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <script src="popup.js"></script>
-    <script src="shared/lib.js" type="text/javascript"></script>
-    <script src="gamebreak.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 100vw; height: 100vh"></div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><script>if (window.parent !==window.self) window.parent.postMessage("bonk", "*"); window.addEventListener("DOMContentLoaded", function (){ document.body.style.margin="0"; document.body.style.height="100vh"; document.body.style.overflow="hidden";}); </script><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Cars Simulator</title><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" /><link rel="stylesheet" href="toast.css" /><link rel="manifest" href="./site.webmanifest" /><link href="shared/style.css" rel="stylesheet" /><link rel="stylesheet" href="TemplateData56/style.css" /><script src="TemplateData56/UnityProgress.js"></script><script src="Build/UnityLoader.js"></script><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><script src="popup.js"></script><script src="shared/lib.js" type="text/javascript"></script><script src="gamebreak.js" type="text/javascript"></script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="webgl-content"><div id="gameContainer" style="width: 100vw; height: 100vh"></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
