--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Connect 3</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
-    <link rel="manifest" href="./site.webmanifest" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <script type="text/javascript" src="connect3.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Connect 3</title><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" /><link rel="manifest" href="./site.webmanifest" /><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" /><link href="style.css" rel="stylesheet" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script type="text/javascript" src="connect3.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
